<resources>
    <string name="app_name">challenge1</string>
    <string name="spinner_title">Escolha um animal</string>
    <string name="botao_editar">Editar</string>
    <string name="texto_dono">Nome do dono:</string>
    <string name="texto_nome">Nome do animal:</string>
    <string name="texto_idade">Idade:</string>
    <string name="titulo">ANIMAIS</string>
    <string name="titulo2">EDITAR</string>
    <string name="hintdono">Insira o nome do dono</string>
    <string name="hintnome">Insira o nome do animal</string>
    <string name="hintidade">Insira a idade do animal</string>
    <string name="botao_guardar">Guardar</string>
    <string-array name="animais">
        <item>Sapo</item>
        <item>Caracol</item>
        <item>Rinoceronte</item>
    </string-array>
</resources>